wasta-multidesktop-bionic (1.2.13) bionic; urgency=medium

  * wasta-login: xfce disable desktop icons (nemo-desktop handles these)
    - in xfce disable some gnome items

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 06 Feb 2019 12:13:24 +0300

wasta-multidesktop-bionic (1.2.12) bionic; urgency=medium

  * minor cleanup to wasta-login from previous changes

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 30 Jan 2019 21:14:43 +0300

wasta-multidesktop-bionic (1.2.11) bionic; urgency=medium

  * wasta-login, app-adjustments: wrap skype Exec with sh -c 'command'

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 30 Jan 2019 21:05:26 +0300

wasta-multidesktop-bionic (1.2.10) bionic; urgency=medium

  * wasta-login: xfce disable skypeforlinux launchMinimized (so
    won't leave behind an empty window)

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 30 Jan 2019 12:19:52 +0300

wasta-multidesktop-bionic (1.2.9) bionic; urgency=medium

  * wasta-login, app-adjustments: skypeforlinux appindicator compatibility

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 30 Jan 2019 12:01:40 +0300

wasta-multidesktop-bionic (1.2.8) bionic; urgency=medium

  * wasta-login.sh: "smart" kill of dconf-service and dbus-daemon

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 23 Jan 2019 11:20:03 +0300

wasta-multidesktop-bionic (1.2.7) bionic; urgency=medium

  * app-adjustments.sh: add "control, panel, system" to xfce-settings-manager
    comment so found by search

 -- Rik Shaw <rikshaw76@gmail.com>  Sun, 20 Jan 2019 17:52:54 +0300

wasta-multidesktop-bionic (1.2.6) bionic; urgency=medium

  * app-adjustments.sh: add several utilities to xfce settings manager

 -- Rik Shaw <rikshaw76@gmail.com>  Sat, 12 Jan 2019 12:34:02 +0300

wasta-multidesktop-bionic (1.2.5) bionic; urgency=medium

  * debian/control: adding theme items as recommends
  * wasta-login.sh: restoring xfce panel clock settings if missing:
    https://askubuntu.com/questions/959339/xfce-panel-clock-disappears
