@@ -2,8 +2,10 @@ wasta-multidesktop-bionic (1.2.13) bionic; urgency=medium
 
   * wasta-login: xfce disable desktop icons (nemo-desktop handles these)
     - in xfce disable some gnome items
+  * app-adjustments: add online-accounts to xfce settings
+    (prefer cinnamon dialog over gnome dialog)
 
- -- Rik Shaw <rikshaw76@gmail.com>  Wed, 06 Feb 2019 12:13:24 +0300
+ -- Rik Shaw <rikshaw76@gmail.com>  Wed, 06 Feb 2019 13:18:14 +0300
 
 wasta-multidesktop-bionic (1.2.12) bionic; urgency=medium
 
